--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 {
   "key": "1c8d10f454ab49e3af4406f44257c88f",
-  "mode": false,
+  "mode": true,
   "links": [
     {
       "id": 1,
-      "link": "https://google.com"
+      "link": "https://xstart.space/click.php?key=6mgxpweksv9efi4a26r5"
     }
   ],
   "country_codes": [
